// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`file structure cli: {"destination":"/Users/nathan.friedly/projects/node-bestzip/test/tmp/test.zip","cwd":"/Users/nathan.friedly/projects/node-bestzip/test/","source":"fixtures/"} 1`] = `
Array [
  "/fixtures",
  "/fixtures/.dotfile",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/test.zip",
]
`;

exports[`file structure cli: {"destination":"/Users/nathan.friedly/projects/node-bestzip/test/tmp/test.zip","cwd":"/Users/nathan.friedly/projects/node-bestzip/test/","source":"fixtures/*"} 1`] = `
Array [
  "/fixtures",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/test.zip",
]
`;

exports[`file structure cli: {"destination":"/Users/nathan.friedly/projects/node-bestzip/test/tmp/test.zip","cwd":"/Users/nathan.friedly/projects/node-bestzip/test/","source":"fixtures/*/*.txt"} 1`] = `
Array [
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/test.zip",
]
`;

exports[`file structure cli: {"destination":"/Users/nathan.friedly/projects/node-bestzip/test/tmp/test.zip","cwd":"/Users/nathan.friedly/projects/node-bestzip/test/","source":"fixtures/subdir/subfile.txt"} 1`] = `
Array [
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/test.zip",
]
`;

exports[`file structure cli: {"destination":"/Users/nathan.friedly/projects/node-bestzip/test/tmp/test.zip","cwd":"/Users/nathan.friedly/projects/node-bestzip/test/fixtures","source":"file.txt"} 1`] = `
Array [
  "/file.txt",
  "/test.zip",
]
`;

exports[`file structure cli: {"destination":"/Users/nathan.friedly/projects/node-bestzip/test/tmp/test.zip","cwd":"/Users/nathan.friedly/projects/node-bestzip/test/fixtures","source":"obama.jpg"} 1`] = `
Array [
  "/obama.jpg",
  "/test.zip",
]
`;

exports[`file structure cli: {"destination":"/Users/nathan.friedly/projects/node-bestzip/test/tmp/test.zip","cwd":"/Users/nathan.friedly/projects/node-bestzip/test/fixtures","source":"subdir/subfile.txt"} 1`] = `
Array [
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip",
]
`;

exports[`file structure cli: {"destination":"/Users/nathan.friedly/projects/node-bestzip/test/tmp/test.zip","cwd":"/Users/nathan.friedly/projects/node-bestzip/test/fixtures","source":["file.txt",".dotfile"]} 1`] = `
Array [
  "/.dotfile",
  "/file.txt",
  "/test.zip",
]
`;

exports[`file structure cli: {"destination":"/Users/nathan.friedly/projects/node-bestzip/test/tmp/test.zip","cwd":"/Users/nathan.friedly/projects/node-bestzip/test/fixtures","source":["file.txt","obama.jpg"]} 1`] = `
Array [
  "/file.txt",
  "/obama.jpg",
  "/test.zip",
]
`;

exports[`file structure cli: {"destination":"/Users/nathan.friedly/projects/node-bestzip/test/tmp/test.zip","cwd":"/Users/nathan.friedly/projects/node-bestzip/test/fixtures","source":["file.txt","subdir"]} 1`] = `
Array [
  "/file.txt",
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip",
]
`;

exports[`file structure cli: {"destination":"/Users/nathan.friedly/projects/node-bestzip/test/tmp/test.zip","cwd":"/Users/nathan.friedly/projects/node-bestzip/test/fixtures/","source":"*"} 1`] = `
Array [
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip",
]
`;

exports[`file structure cli: {"destination":"/Users/nathan.friedly/projects/node-bestzip/test/tmp/test.zip","cwd":"/Users/nathan.friedly/projects/node-bestzip/test/fixtures/","source":"./"} 1`] = `
Array [
  "/.dotfile",
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip",
]
`;

exports[`file structure cli: {"destination":"/Users/nathan.friedly/projects/node-bestzip/test/tmp/test.zip","cwd":"/Users/nathan.friedly/projects/node-bestzip/test/fixtures/subdir","source":"../file.txt"} 1`] = `
Array [
  "/file.txt",
  "/test.zip",
]
`;
